--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "codemirror": "^5.16.0",
     "markdown": "^0.5.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.1.0",
